add readme file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://DOrlov74.github.io/ToDoList",
+  "homepage": "https://DOrlov74.github.io/ToDoNative",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
